--- a/ARPet/Experience.rcproject/com.apple.RCFoundation.Project
+++ b/ARPet/Experience.rcproject/com.apple.RCFoundation.Project
@@ -68,7 +68,7 @@
                                           "target" : [
                                             "13C21122-FA15-4DF6-9490-8A4413537EAD"
                                           ],
-                                          "userIdentifier" : "Did Spin"
+                                          "userIdentifier" : "Didjump"
                                         },
                                         "name" : {
                                           "type" : "custom"
@@ -574,21 +574,21 @@
               "title" : "RobotScene",
               "viewTransform" : {
                 "cameraTransform" : [
-                  0.99998772144317627,
-                  1.1017316836614555e-08,
-                  -0.0049710129387676716,
+                  0.99864375591278076,
+                  1.0038941233858623e-08,
+                  0.052064903080463409,
                   0,
-                  -0.0020234114490449429,
-                  0.9134070873260498,
-                  -0.40704217553138733,
+                  0.00039782433304935694,
+                  0.99997073411941528,
+                  -0.0076301414519548416,
                   0,
-                  0.0045405854471027851,
-                  0.40704718232154846,
-                  0.91339582204818726,
+                  -0.052063342183828354,
+                  0.007640475407242775,
+                  0.99861454963684082,
                   0,
-                  0.1838967502117157,
-                  1.2310628890991211,
-                  2.0053362846374512,
+                  0.05231732502579689,
+                  0.32565397024154663,
+                  2.3370752334594727,
                   1
                 ],
                 "sceneTransform" : [
